--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,75 @@
-flask
+annotated-types==0.7.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpathlib==0.16.0
+confection==0.1.5
+cymem==2.0.11
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+filelock==3.18.0
+Flask==3.1.1
+flask-cors==6.0.1
+fsspec==2025.5.1
+geographiclib==2.0
+geopandas==1.1.0
+geopy==2.4.1
+hf-xet==1.1.5
+huggingface-hub==0.33.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+langcodes==3.5.0
+language_data==1.3.0
+llvmlite==0.44.0
+marisa-trie==1.2.1
+MarkupSafe==3.0.2
+more-itertools==10.7.0
+mpmath==1.3.0
+murmurhash==1.0.13
+networkx==3.5
+numba==0.61.2
+numpy==1.26.4
+openai-whisper @ git+https://github.com/openai/whisper.git@dd985ac4b90cafeef8712f2998d62c59c3e62d22
+osmnx==2.0.4
+packaging==25.0
+pandas==2.3.0
+preshed==3.0.10
+pydantic==2.11.7
+pydantic_core==2.33.2
+pyogrio==0.11.0
+pyproj==3.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scipy==1.15.3
+shapely==2.1.1
+six==1.17.0
+smart-open==6.4.0
+soupsieve==2.7
 spacy==3.7.4
-transformers
-requests
-beautifulsoup4
-geopy
-torch
-git+https://github.com/openai/whisper.git
-osmnx>=1.3
-networkx>=2.8
-scipy>=1.8
-python-dotenv
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+sympy==1.14.0
+thinc==8.2.5
+tiktoken==0.9.0
+tokenizers==0.21.1
+torch==2.2.2
+tqdm==4.67.1
+transformers==4.52.4
+typer==0.9.4
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.5.0
+wasabi==1.1.3
+weasel==0.3.4
+Werkzeug==3.1.3
